# mr-cool-nes

./: .mrcoolnes  .travis.yml  Cargo.toml  README.md  coverage.sh  run.sh
examples/: 1_load_rom.rs  2_create_nes.rs
src/: emu_config.rs  font_map.rs  headless_renderer.rs  init.rs  lib.rs  renderer.rs  sdl_renderer.rs
src/core/: cpu.rs  mapper.rs  memory.rs  mod.rs  nes.rs  ppu.rs  rom.rs  tools.rs
tests/: cpu_tests.rs  integration_tests.rs  mapper_tests.rs  memory_tests.rs  ppu_tests.rs  tests.md
