[package]
name = "mr-cool-nes"
version = "0.1.0"
authors = ["nukeop <nukeop@gumblert.tech>"]

[dependencies]
clap = "4.0.2"
config = "0.11.0"
log = "0.4.0"
pretty_env_logger = "0.4.0"

[dependencies.sdl2]
version = "0.34.0"
features = ["image"]

[badges]
travis = { repository = "nukeop/mr-cool-nes" }